tests/toy/neg/001467_mutation.toylang
program a = { var a : then int; } .
